[package]
name = "_handly_background"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["winuser", "errhandlingapi"] }
cxx = "1.0"
device_query = "1.0.0"

[build-dependencies]
cxx-build = "1.0"